k8s-microservices-full.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: review-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: review
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-deployment
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      component: review
  template:
    metadata:
      labels:
        component: review
    spec:
      containers:
        - name: review
          image: REVIEW_CONTAINER_IMAGE
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "768Mi"
              cpu: "1"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: product
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      component: product
  template:
    metadata:
      labels:
        component: product
    spec:
      containers:
        - name: product
          image: PRODUCT_CONTAINER_IMAGE
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "768Mi"
              cpu: "1"
          ports:
            - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-clusterip-service
                port:
                  number: 8080
